force-app/main/default/objects/DeletedOpportunity__c/DeletedOpportunity__c.object-meta.xml
<CustomObject>
    <label>Deleted Opportunity</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deleted Opportunites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>