force-app/main/default/objects/DeletedOpportunity__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>