force-app/main/default/objects/DeletedOpportunity__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>OpportunityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>